--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "author": "ReadMe <support@readme.io> (https://readme.com)",
   "engines": {
-    "node": "^14 || ^16 || ^17"
+    "node": ">=14"
   },
   "bin": {
     "rdme": "bin/rdme"
@@ -48,7 +48,7 @@
     "gray-matter": "^4.0.1",
     "isemail": "^3.1.3",
     "node-fetch": "^2.6.1",
-    "oas-normalize": "^5.2.1",
+    "oas-normalize": "^6.0.0",
     "open": "^8.2.1",
     "parse-link-header": "^2.0.0",
     "read": "^1.0.7",
@@ -57,13 +57,13 @@
     "update-notifier": "^5.1.0"
   },
   "devDependencies": {
-    "@readme/eslint-config": "^8.6.0",
-    "@readme/oas-examples": "^5.0.0",
+    "@readme/eslint-config": "^8.7.0",
+    "@readme/oas-examples": "^5.1.1",
     "alex": "^10.0.0",
-    "eslint": "^8.12.0",
+    "eslint": "^8.13.0",
     "jest": "^27.5.1",
     "nock": "^13.2.4",
-    "prettier": "^2.6.1"
+    "prettier": "^2.6.2"
   },
   "scripts": {
     "lint": "eslint . bin/rdme bin/set-version-output",
