--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       # Let's dynamically update our docs with the latest version of rdme!
-      # Note that these next two steps are not required
+      # Note that these next three steps are not required
       # in order to sync your docs to ReadMe.
 
       # First, we run a script that sets a few outputs:
