--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,7 +44,7 @@ jobs:
       # we run the `rdme` GitHub Action to sync the Markdown file
       # in the `documentation` directory.
       # Here's the page we're syncing: https://docs.readme.com/docs/rdme
-      - name: GitHub Action
+      - name: Sync docs to ReadMe
         # We use the `main` branch as ref for GitHub Action
         # This is NOT recommended, as it can break your workflows without notice!
         # We recommend specifying a fixed version, i.e. @7.0
