--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,11 @@ jobs:
         with:
           rdme: validate oas-examples-repo/3.1/json/petstore.json
 
+      - name: Run `validate` command to simulate warning
+        uses: ./rdme-repo/
+        with:
+          rdme: validate --workingDirectory=rdme-repo/__tests__/__fixtures__
+
       # Docs: https://rdme-test.readme.io
       - name: Run `openapi` command
         uses: ./rdme-repo/
