--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,9 @@
      * We should be returning Promise-wrapped values in our main command functions
      * so we can write robust tests and take advantage of `bin/rdme`,
      * which we use for printing function outputs and returning correct exit codes.
+     *
+     * Furthermore, we should also be using our custom loggers (see src/lib/logger.js)
+     * instead of using console.info() or console.warn() statements.
      */
     "no-console": ["warn"]
   }
