--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,35 @@
 {
-  "extends": ["@readme/eslint-config"],
+  "extends": [
+    "@readme/eslint-config",
+    "@readme/eslint-config/typescript"
+  ],
   "root": true,
   "parserOptions": {
     "ecmaVersion": 2020
   },
   "rules": {
+    "@typescript-eslint/ban-types": ["error", {
+      "types": {
+        // We specify `{}` in `CommandOptions` generics when those commands don't have their own
+        // options and it's cleaner for us to do that than `Record<string, unknown>`.
+        "{}": false
+      }
+    }],
+
     /**
      * Because our command classes have a `run` method that might not always call `this` we need to
      * explicitly exclude `run` from this rule.
      */
     "class-methods-use-this": ["error", { "exceptMethods": ["run"] }],
+
+    "import/order": ["error", {
+      "alphabetize": {
+        "order": "asc",
+        "caseInsensitive": true
+      },
+      "groups": ["type", "builtin", "external", "internal", "parent", "sibling", "index", "object"],
+      "newlines-between": "always"
+    }],
 
     /**
      * This is a small rule to prevent us from using console.log() statements in our commands.
