--- a/package.json
+++ b/package.json
@@ -49,15 +49,15 @@
     "ignore": "^5.2.0",
     "mime-types": "^2.1.35",
     "node-fetch": "^2.6.1",
-    "oas": "^20.2.0",
+    "oas": "^20.8.7",
     "oas-normalize": "^8.4.1",
     "open": "^8.2.1",
     "ora": "^5.4.1",
     "parse-link-header": "^2.0.0",
     "pluralize": "^8.0.0",
     "prompts": "^2.4.2",
-    "semver": "^7.0.0",
-    "simple-git": "^3.13.0",
+    "semver": "^7.5.3",
+    "simple-git": "^3.19.1",
     "string-argv": "^0.3.1",
     "table": "^6.8.1",
     "tmp-promise": "^3.0.2",
@@ -65,11 +65,12 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@readme/better-ajv-errors": "^1.5.0",
-    "@readme/eslint-config": "^10.6.0",
+    "@readme/eslint-config": "^10.6.1",
     "@readme/oas-examples": "^5.10.0",
+    "@testing-library/dom": "^9.3.1",
     "@types/command-line-args": "^5.2.0",
     "@types/command-line-usage": "^5.0.2",
     "@types/config": "^3.3.0",
@@ -86,17 +87,17 @@
     "@types/tmp": "^0.2.3",
     "@types/validator": "^13.7.6",
     "ajv": "^8.11.0",
-    "eslint": "^8.29.0",
+    "eslint": "^8.44.0",
     "husky": "^8.0.0",
     "jest": "^29.0.3",
-    "jest-extended": "^3.0.0",
+    "jest-extended": "^4.0.0",
     "js-yaml": "^4.1.0",
     "nock": "^13.2.7",
     "prettier": "^2.8.1",
-    "ts-jest": "^29.0.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "type-fest": "^3.0.0",
-    "typescript": "^5.0.3"
+    "type-fest": "^3.12.0",
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "build": "tsc",
