--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
     "@types/tmp": "^0.2.3",
     "@types/validator": "^13.7.6",
     "ajv": "^8.11.0",
-    "alex": "^11.0.0",
     "eslint": "^8.44.0",
     "husky": "^8.0.0",
     "jest": "^29.0.3",
@@ -107,7 +106,7 @@
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "prepare": "husky install",
-    "pretest": "alex . && npm run lint && npm run prettier && npm run schemas:check",
+    "pretest": "npx alex . && npm run lint && npm run prettier && npm run schemas:check",
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
