--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "bugs": {
     "url": "https://github.com/readmeio/rdme/issues"
   },
+  "type": "module",
   "dependencies": {
     "@actions/core": "^1.6.0",
     "chalk": "^4.1.2",
