--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["ES2020", "ES2021.Intl"],
-    "module": "CommonJS",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "outDir": "dist/",
     "paths": {
       "editor": [".sink.d.ts"]
