--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,6 @@
 {
   "extends": ["@readme/eslint-config", "@readme/eslint-config/typescript"],
   "root": true,
-  "parserOptions": {
-    "ecmaVersion": 2020
-  },
   "overrides": [
     {
       "files": ["bin/*.js", "config/*.js"],
@@ -12,6 +9,13 @@
       }
     }
   ],
+  "env": {
+    "es2021": true,
+    "node": true
+  },
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "rules": {
     "@typescript-eslint/ban-types": [
       "error",
@@ -29,6 +33,10 @@
      * explicitly exclude `run` from this rule.
      */
     "class-methods-use-this": ["error", { "exceptMethods": ["run"] }],
+
+    "import/extensions": ["off"],
+
+    "import/no-commonjs": ["error"],
 
     /**
      * This is a small rule to prevent us from using console.log() statements in our commands.
