--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/semver": "^7.3.12",
     "@types/tmp": "^0.2.3",
     "@types/validator": "^13.7.6",
+    "@vitest/coverage-v8": "^0.34.1",
     "ajv": "^8.11.0",
     "eslint": "^8.44.0",
     "husky": "^8.0.0",
