--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,6 @@ jobs:
   action:
     name: GitHub Action Dry Run
     runs-on: ubuntu-latest
-    continue-on-error: true # TODO: remove this!
     steps:
       - name: Checkout GitHub Action
         uses: actions/checkout@v3
@@ -78,23 +77,27 @@ jobs:
       # TODO: Maybe remove this
       - name: Run `openapi:validate` on file in rdme repo (take 1)
         uses: ./rdme-repo/
+        continue-on-error: true
         with:
           rdme: openapi:validate rdme-repo/__tests__/__fixtures__/petstore-simple-weird-version.json
 
       # TODO: Maybe remove this
       - name: Run `openapi:validate` on file in rdme repo (take 2)
         uses: ./rdme-repo/
+        continue-on-error: true
         with:
           rdme: openapi:validate ${{ github.workspace }}/rdme-repo/__tests__/__fixtures__/petstore-simple-weird-version.json
 
       # TODO: Maybe remove this
       - name: Run `openapi:validate` on file in rdme repo (take 3)
         uses: ./rdme-repo/
+        continue-on-error: true
         with:
           rdme: openapi:validate ${{ github.workspace }}/./rdme-repo/__tests__/__fixtures__/petstore-simple-weird-version.json
 
       - name: Run `openapi:validate` on file with refs
         uses: ./rdme-repo/
+        continue-on-error: true
         with:
           rdme: openapi:validate ${{ github.workspace }}/rdme-repo/__tests__/__fixtures__/ref-oas/petstore.json --workingDirectory ${{ github.workspace }}/rdme-repo
 
