--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,24 +84,24 @@ jobs:
         uses: ./rdme-repo/
         continue-on-error: true
         with:
-          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/ref-oas/petstore.json
+          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/ref-oas/petstore.json --workingDirectory ${{ github.workspace }}
 
       - name: Run `openapi:validate` on file with refs (take 2)
         uses: ./rdme-repo/
         continue-on-error: true
         with:
-          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/ref-oas/petstore.json --workingDirectory rdme-repo
+          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/ref-oas/petstore.json --workingDirectory ${{ github.workspace }}/rdme-repo
 
       - name: Run `openapi:validate` on file with relative refs (take 1)
         uses: ./rdme-repo/
         continue-on-error: true
         with:
-          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/relative-ref-oas/petstore.json --workingDirectory __tests__/__fixtures__/relative-ref-oas
+          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/relative-ref-oas/petstore.json --workingDirectory ${{ github.workspace }}/__tests__/__fixtures__/relative-ref-oas
 
       - name: Run `openapi:validate` on file with relative refs (take 2)
         uses: ./rdme-repo/
         with:
-          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/relative-ref-oas/petstore.json --workingDirectory rdme-repo/__tests__/__fixtures__/relative-ref-oas
+          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/relative-ref-oas/petstore.json --workingDirectory ${{ github.workspace }}/rdme-repo/__tests__/__fixtures__/relative-ref-oas
 
       # Docs: https://rdme-test.readme.io
       - name: Run `openapi` command
