--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "@readme/better-ajv-errors": "^1.5.0",
     "@readme/eslint-config": "^10.6.1",
     "@readme/oas-examples": "^5.10.0",
-    "@testing-library/dom": "^9.3.1",
     "@types/command-line-args": "^5.2.0",
     "@types/command-line-usage": "^5.0.2",
     "@types/config": "^3.3.0",
@@ -84,15 +83,17 @@
     "@types/pluralize": "^0.0.30",
     "@types/prompts": "^2.4.2",
     "@types/semver": "^7.3.12",
-    "@types/tmp": "^0.2.3",
     "@types/validator": "^13.7.6",
     "ajv": "^8.11.0",
+    "alex": "^11.0.0",
     "eslint": "^8.44.0",
     "husky": "^8.0.0",
     "jest": "^29.0.3",
     "jest-extended": "^4.0.0",
     "js-yaml": "^4.1.0",
+    "knip": "^2.19.3",
     "nock": "^13.2.7",
+    "openapi-types": "^12.1.3",
     "prettier": "^2.8.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -106,7 +107,7 @@
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "prepare": "husky install",
-    "pretest": "npx alex . && npm run lint && npm run prettier && npm run schemas:check",
+    "pretest": "alex . && knip && npm run lint && npm run prettier && npm run schemas:check",
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
