--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/semver": "^7.3.12",
     "@types/tmp": "^0.2.3",
     "@types/validator": "^13.7.6",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "ajv": "^8.11.0",
     "eslint": "^8.47.0",
     "husky": "^8.0.0",
