--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
     "@readme/better-ajv-errors": "^1.5.0",
-    "@readme/eslint-config": "^10.6.1",
+    "@readme/eslint-config": "^12.0.3",
     "@readme/oas-examples": "^5.10.0",
     "@testing-library/dom": "^9.3.1",
     "@types/command-line-args": "^5.2.0",
@@ -86,14 +86,15 @@
     "@types/semver": "^7.3.12",
     "@types/tmp": "^0.2.3",
     "@types/validator": "^13.7.6",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "ajv": "^8.11.0",
-    "eslint": "^8.44.0",
+    "eslint": "^8.47.0",
     "husky": "^8.0.0",
     "jest": "^29.0.3",
     "jest-extended": "^4.0.0",
     "js-yaml": "^4.1.0",
     "nock": "^13.2.7",
-    "prettier": "^2.8.1",
+    "prettier": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "type-fest": "^3.12.0",
@@ -102,11 +103,11 @@
   "scripts": {
     "build": "tsc",
     "debug": "ts-node src/cli.ts",
-    "lint": "eslint . bin/rdme --ext .js,.ts",
+    "lint": "npx alex . && npm run lint:ts && npm run prettier && npm run schemas:check",
+    "lint:ts": "eslint . bin/rdme --ext .js,.ts",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "prepare": "husky install",
-    "pretest": "npx alex . && npm run lint && npm run prettier && npm run schemas:check",
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
