--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "@types/prompts": "^2.4.2",
     "@types/semver": "^7.3.12",
     "@types/validator": "^13.7.6",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "ajv": "^8.11.0",
     "alex": "^11.0.0",
     "eslint": "^8.47.0",
@@ -104,7 +103,7 @@
   "scripts": {
     "build": "tsc",
     "debug": "ts-node src/cli.ts",
-    "lint": "npx alex . && npm run lint:ts && npm run prettier && npm run schemas:check",
+    "lint": "alex . && knip && npm run lint:ts && npm run prettier && npm run schemas:check",
     "lint:ts": "eslint . bin/rdme --ext .js,.ts",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
