--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "@readme/better-ajv-errors": "^1.5.0",
     "@readme/eslint-config": "^12.0.3",
     "@readme/oas-examples": "^5.10.0",
-    "@testing-library/dom": "^9.3.1",
     "@types/command-line-args": "^5.2.0",
     "@types/command-line-usage": "^5.0.2",
     "@types/config": "^3.3.0",
@@ -84,16 +83,17 @@
     "@types/pluralize": "^0.0.30",
     "@types/prompts": "^2.4.2",
     "@types/semver": "^7.3.12",
-    "@types/tmp": "^0.2.3",
     "@types/validator": "^13.7.6",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "ajv": "^8.11.0",
+    "alex": "^11.0.0",
     "eslint": "^8.47.0",
     "husky": "^8.0.0",
     "jest": "^29.0.3",
     "jest-extended": "^4.0.0",
     "js-yaml": "^4.1.0",
+    "knip": "^2.19.3",
     "nock": "^13.2.7",
+    "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -103,7 +103,7 @@
   "scripts": {
     "build": "tsc",
     "debug": "ts-node src/cli.ts",
-    "lint": "npx alex . && npm run lint:ts && npm run prettier && npm run schemas:check",
+    "lint": "alex . && knip && npm run lint:ts && npm run prettier && npm run schemas:check",
     "lint:ts": "eslint . bin/rdme --ext .js,.ts",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
