--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "husky": "^8.0.0",
     "js-yaml": "^4.1.0",
     "knip": "^2.19.3",
+    "msw": "^1.2.3",
     "nock": "^13.2.7",
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
