--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,6 +23,12 @@ updates:
       - kanadgupta
     labels:
       - dependencies
+    groups:
+      minor-developent-deps:
+        dependency-type: 'development'
+        update-types:
+          - minor
+          - patch
     commit-message:
       prefix: chore(deps)
       prefix-development: chore(deps-dev)
