--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
 
-      - name: Install deps
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
+      - name: Build and run tests
+        run: npm cit
 
   lint:
     runs-on: ubuntu-latest
