--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version:
+          - 14
           - 16
           - 18
           - 20
@@ -28,14 +29,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
 
-      - name: Install deps
-        run: npm ci
-
-      - name: Build dist
-        run: npm run build
-
-      - name: Run tests
-        run: npm test
+      - name: Build and run tests
+        run: npm cit
 
   lint:
     runs-on: ubuntu-latest
