--- a/package.json
+++ b/package.json
@@ -84,12 +84,15 @@
     "@types/semver": "^7.3.12",
     "@types/validator": "^13.7.6",
     "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/expect": "^0.34.3",
     "ajv": "^8.11.0",
     "alex": "^11.0.0",
     "eslint": "^8.47.0",
+    "headers-polyfill": "^3.1.2",
     "husky": "^8.0.0",
     "js-yaml": "^4.1.0",
     "knip": "^2.19.3",
+    "msw": "^1.2.3",
     "nock": "^13.2.7",
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
@@ -106,10 +109,13 @@
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "prepare": "husky install",
+    "pretest": "npm run build",
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
-    "test": "vitest run --coverage"
+    "test": "npm run test:multi && npm run test:single",
+    "test:multi": "vitest run --coverage",
+    "test:single": "vitest run --coverage --config vitest.single-threaded.config.ts"
   },
   "commitlint": {
     "extends": [
