--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     name: Test Suite
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         node-version:
           - 14
@@ -28,14 +29,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
 
-      - name: Install deps
-        run: npm ci
-
-      - name: Build dist
-        run: npm run build
-
-      - name: Run tests
-        run: npm test
+      - name: Build and run tests
+        run: npm cit
 
   lint:
     runs-on: ubuntu-latest
