--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
       "editor": [".sink.d.ts"]
     },
     "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
     "target": "ES2020"
   },
   "include": ["./config/*.js", "./config/*.json", "./src/**/*"]
