--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["plugin:require-extensions/recommended", "@readme/eslint-config", "@readme/eslint-config/typescript"],
+  "extends": ["@readme/eslint-config", "@readme/eslint-config/typescript", "@readme/eslint-config/esm"],
   "root": true,
   "overrides": [
     {
@@ -27,17 +27,12 @@
         }
       }
     ],
-    "unicorn/prefer-node-protocol": "error",
 
     /**
      * Because our command classes have a `run` method that might not always call `this` we need to
      * explicitly exclude `run` from this rule.
      */
     "class-methods-use-this": ["error", { "exceptMethods": ["run"] }],
-
-    "import/extensions": ["off"],
-
-    "import/no-commonjs": ["error"],
 
     /**
      * This is a small rule to prevent us from using console.log() statements in our commands.
