--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
     "ajv": "^8.11.0",
     "alex": "^11.0.0",
     "eslint": "^8.47.0",
-    "eslint-plugin-require-extensions": "^0.1.3",
     "headers-polyfill": "^3.1.2",
     "husky": "^8.0.0",
     "js-yaml": "^4.1.0",
@@ -105,7 +104,7 @@
     "build": "tsc",
     "debug": "ts-node src/cli.ts",
     "lint": "alex . && knip && npm run lint:ts && npm run prettier && npm run schemas:check",
-    "lint:ts": "eslint . --ext .js,.ts,.cjs,.mjs",
+    "lint:ts": "eslint . --ext .js,.ts,.mjs",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "prepare": "husky install",
