--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "string-argv": "^0.3.1",
     "table": "^6.8.1",
     "tmp-promise": "^3.0.2",
-    "update-notifier-cjs": "^5.1.5",
+    "update-notifier": "^6.0.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -70,6 +70,10 @@
     "@readme/better-ajv-errors": "^1.5.0",
     "@readme/eslint-config": "^13.0.0",
     "@readme/oas-examples": "^5.10.0",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/command-line-args": "^5.2.0",
     "@types/command-line-usage": "^5.0.2",
     "@types/configstore": "^6.0.0",
@@ -94,7 +98,9 @@
     "msw": "^1.2.3",
     "nock": "^13.2.7",
     "openapi-types": "^12.1.3",
+    "pkg": "^5.8.1",
     "prettier": "^3.0.2",
+    "rollup": "^3.29.1",
     "ts-node": "^10.9.1",
     "type-fest": "^4.3.1",
     "typescript": "^5.1.6",
@@ -102,6 +108,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "build:exe": "npm run build && rollup -c && pkg rdme-rollup.cjs --target host --output exe/rdme",
     "debug": "ts-node src/cli.ts",
     "lint": "alex . && knip && npm run lint:ts && npm run prettier && npm run schemas:check",
     "lint:ts": "eslint . --ext .js,.ts",
