--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "configstore": "^5.0.0",
     "debug": "^4.3.3",
     "editor": "^1.0.0",
-    "form-data": "^4.0.0",
+    "formdata-node": "^5.0.1",
     "gray-matter": "^4.0.1",
     "ignore": "^5.2.0",
     "mime-types": "^2.1.35",
