--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/pluralize": "^0.0.30",
     "@types/prompts": "^2.4.2",
     "@types/semver": "^7.3.12",
+    "@types/tmp": "^0.2.4",
     "@types/validator": "^13.7.6",
     "@vitest/coverage-v8": "^0.34.1",
     "@vitest/expect": "^0.34.3",
