--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "editor": [".sink.d.ts"]
     },
     "resolveJsonModule": true,
-    "strict": true,
+    // "strict": true,
     "target": "ES2020",
     "useUnknownInCatchVariables": false
   },
