--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "editor": [".sink.d.ts"]
     },
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     // "strict": true,
     "target": "ES2020",
     "useUnknownInCatchVariables": false
