--- a/action.yml
+++ b/action.yml
@@ -12,8 +12,5 @@ outputs:
   rdme:
     description: The rdme command result output
 runs:
-  using: docker
-  image: docker://ghcr.io/readmeio/rdme:8.7.0-next.2
-  args:
-    - docker-gha
-    - ${{ inputs.rdme }}
+  using: node20
+  main: rollup-output.cjs
