--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    // "strict": true,
+    "strict": true,
     "target": "ES2020",
     "useUnknownInCatchVariables": false
   },
