--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
       "editor": [".sink.d.ts"]
     },
     "resolveJsonModule": true,
-    "target": "ES2020"
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "ES2020",
+    "useUnknownInCatchVariables": false
   },
   "include": ["./src/**/*"]
 }
