--- a/__tests__/.eslintrc
+++ b/__tests__/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "@readme/eslint-config/testing/vitest"
+  "extends": "@readme/eslint-config/testing/vitest",
+  "rules": {
+    // vitest currently allows for __dirname, require, etc.
+    // see https://github.com/vitest-dev/vitest/issues/2841
+    "unicorn/prefer-module": "off"
+  }
 }
