--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,7 +24,7 @@ updates:
     labels:
       - dependencies
     groups:
-      minor-developent-deps:
+      minor-development-deps:
         dependency-type: 'development'
         update-types:
           - minor
