--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "type": "module",
   "dependencies": {
     "@actions/core": "^1.6.0",
+    "@oclif/core": "^3.15.0",
     "chalk": "^5.3.0",
     "ci-info": "^4.0.0",
     "command-line-args": "^5.2.0",
@@ -95,6 +96,7 @@
     "knip": "^3.3.4",
     "msw": "^2.0.3",
     "nock": "^13.2.7",
+    "oclif": "^4.1.0",
     "openapi-types": "^12.1.3",
     "pkg": "^5.8.1",
     "prettier": "^3.0.2",
