--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "bin": {
     "rdme": "bin/run.js"
   },
+  "files": [
+    "/bin/run*",
+    "/dist",
+    "/oclif.manifest.json"
+  ],
   "keywords": [
     "api",
     "apidoc",
